[gd_scene load_steps=24 format=3 uid="uid://cy7ywppb2i4ey"]

[ext_resource type="Script" path="res://Scripts/Entities/player.gd" id="1_mpqcp"]
[ext_resource type="Resource" uid="uid://b35njdhefynw5" path="res://Ressources/player_inventory.tres" id="2_b2niv"]
[ext_resource type="Script" path="res://Scripts/Entities/Pseudo.gd" id="2_bmpr3"]
[ext_resource type="Script" path="res://Scripts/Entities/BodyPart.gd" id="2_cnrj0"]
[ext_resource type="PackedScene" uid="uid://cgqrq6rysq7ws" path="res://Scenes/Ui/inventory_gui.tscn" id="2_dro4v"]
[ext_resource type="PackedScene" uid="uid://bvkvxoqp0eys3" path="res://Scenes/Items/rifle_prototype.tscn" id="3_xq2hx"]
[ext_resource type="PackedScene" uid="uid://cdp8oynggphk4" path="res://Scenes/Ui/quest_ui.tscn" id="5_p4gfi"]
[ext_resource type="PackedScene" uid="uid://bdjvvprw2achb" path="res://Scenes/Ui/health_bar.tscn" id="6_1voe1"]
[ext_resource type="PackedScene" uid="uid://sgxyoglr7pux" path="res://Scenes/Menus/pause_menu.tscn" id="8_hcrn3"]
[ext_resource type="PackedScene" uid="uid://x003u273j5s0" path="res://Scenes/Ui/press_e_ui.tscn" id="9_hu5b3"]
[ext_resource type="Texture2D" uid="uid://c50xr2pfcelp8" path="res://Assets/Images/crosshair.png" id="11_1sp03"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1lcpa"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Pseudo:text")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Head:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Head/Camera3D:rotation")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:is_crouching")
properties/5/spawn = true
properties/5/replication_mode = 1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gfuv1"]
resource_local_to_scene = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e6ydu"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sbrlq"]
resource_local_to_scene = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d5hqf"]
resource_local_to_scene = true
radius = 0.55

[sub_resource type="BoxMesh" id="BoxMesh_ipsvg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_wtfnw"]
radius = 0.08

[sub_resource type="BoxShape3D" id="BoxShape3D_xwtsl"]
size = Vector3(0.404297, 0.323242, 1.96088)

[sub_resource type="Animation" id="Animation_e7y2j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/rifle_prototype:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/rifle_prototype:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.546027, -0.273746, -0.724783)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyCollision/BodyMesh:mesh:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyCollision:shape:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.50028, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("DamageArea3D/CollisionShape3D:shape:height")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_yvogq"]
resource_name = "crouch"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyCollision/BodyMesh:mesh:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyCollision:shape:height")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.50028, 0), Vector3(0, 1.2, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DamageArea3D/CollisionShape3D:shape:height")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6rs1o"]
_data = {
"RESET": SubResource("Animation_e7y2j"),
"crouch": SubResource("Animation_yvogq")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_wfju5"]
size = Vector3(1, 2, 1)

[node name="Player" type="CharacterBody3D" groups=["Players"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_mpqcp")
inv = ExtResource("2_b2niv")

[node name="SpeedLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 25.0
offset_bottom = 48.0
grow_horizontal = 0

[node name="inventory_gui" parent="." instance=ExtResource("2_dro4v")]

[node name="pause_menu" parent="." instance=ExtResource("8_hcrn3")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1lcpa")

[node name="BodyCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_gfuv1")

[node name="BodyMesh" type="MeshInstance3D" parent="BodyCollision"]
material_override = SubResource("StandardMaterial3D_e6ydu")
mesh = SubResource("CapsuleMesh_sbrlq")
skeleton = NodePath("../..")

[node name="DamageArea3D" type="Area3D" parent="." groups=["Players"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("2_cnrj0")
damage = 20

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea3D"]
shape = SubResource("CapsuleShape3D_d5hqf")

[node name="Pseudo" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.40701, 0)
billboard = 2
text = "Pseudo"
font_size = 64
script = ExtResource("2_bmpr3")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50028, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.765, 0, 0, 0, 0.33, 0, 0, 0, 0.705, 0, -0.000703454, -0.180768)
mesh = SubResource("BoxMesh_ipsvg")
skeleton = NodePath("../../BodyCollision")

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="rifle_prototype" parent="Head/Camera3D" instance=ExtResource("3_xq2hx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.546027, -0.273746, -0.724783)

[node name="Quest_ui" parent="Head/Camera3D" instance=ExtResource("5_p4gfi")]
visible = false

[node name="HealthBar" parent="Head/Camera3D" instance=ExtResource("6_1voe1")]

[node name="DeathLabel" type="Label" parent="Head/Camera3D"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_font_sizes/font_size = 80
text = "DEAD"

[node name="Press_e_ui" parent="Head/Camera3D" instance=ExtResource("9_hu5b3")]
visible = false

[node name="HeadCast" type="ShapeCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.668725, 0)
shape = SubResource("SphereShape3D_wtfnw")
target_position = Vector3(0, 0, 0)
debug_shape_custom_color = Color(0.403922, 0.00392157, 1, 1)

[node name="collectable_area" type="Area3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.50028, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/collectable_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -1.07787)
shape = SubResource("BoxShape3D_xwtsl")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.5
offset_top = -10.5
offset_right = 10.5
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_1sp03")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6rs1o")
}
autoplay = "idle"
playback_default_blend_time = 0.05

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
shape = SubResource("BoxShape3D_wfju5")

[connection signal="body_part_hit" from="DamageArea3D" to="." method="_on_body_part_hit"]
[connection signal="health_depleted" from="Head/Camera3D/HealthBar" to="." method="_on_health_bar_health_depleted"]
[connection signal="area_entered" from="Head/collectable_area" to="." method="_on_collectable_area_area_entered"]
[connection signal="area_exited" from="Head/collectable_area" to="." method="_on_collectable_area_area_exited"]
